# special-robot

./: .gitignore
.devcontainer/: devcontainer.json
compose/: compose.laptop.yml  compose.pi.yml
docker/ros1_bridge/: Dockerfile
docker/ros1_hw/: dofbot.urdf
docker/ros2_sim/: Dockerfile
ros2_ws/log/: latest_build
ros2_ws/src/color_sorting/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/color_sorting/color_sorting/: HSV_config.txt  color_sort.py
ros2_ws/src/dofbot_description/: CMakeLists.txt  package.xml
ros2_ws/src/dofbot_description/config/: controllers.yaml
ros2_ws/src/dofbot_description/launch/: gazebo.launch.py  view_dofbot.launch.py
ros2_ws/src/dofbot_description/rviz/: dofbot.rviz
ros2_ws/src/dofbot_description/urdf/: dofbot.urdf.xacro
